@@ -1,37 +1,32 @@
 package fr.soat.training.api.superhero.services;
 
+import java.util.List;
+import java.util.UUID;
+
 import fr.soat.training.api.superhero.domain.HistoricEvent;
 import fr.soat.training.api.superhero.domain.Mission;
 import fr.soat.training.api.superhero.domain.builders.HistoricEventBuilder;
-import fr.soat.training.api.superhero.domain.builders.MissionBuilder;
 import fr.soat.training.api.superhero.repository.HistoricEventRepository;
 import fr.soat.training.api.superhero.services.domain.MatchingHistoricEvent;
-import fr.soat.training.api.superhero.services.domain.MatchingMission;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class HistoricEventService {
 
-    @Autowired
-    private MissionService missionService;
+    private final MissionService missionService;
 
-    @Autowired
-    private HistoricEventRepository historicEventRepository;
+    private final HistoricEventRepository historicEventRepository;
 
     public HistoricEventService(MissionService missionService, HistoricEventRepository historicEventRepository) {
         this.missionService = missionService;
         this.historicEventRepository = historicEventRepository;
     }
 
-    public void createNewEventOnMission(UUID missionUUID, String actionDesciption) {
-        MatchingMission matchingMission = this.missionService.getMission(missionUUID);
-        Mission relatedMission = new MissionBuilder().createMission(matchingMission.getTitle()).assignedTo(matchingMission.getAssignedHeroName()).build();
-        HistoricEvent theEvent = new HistoricEventBuilder().createAction(actionDesciption).madeDuringTheMission(relatedMission)
+    public void createNewEventOnMission(UUID missionUUID, String actionDescription) {
+        Mission relatedMission = this.missionService.getMission(missionUUID);
+        HistoricEvent theEvent = new HistoricEventBuilder()
+                .createAction(actionDescription)
+                .madeDuringTheMission(relatedMission)
                 .build();
 
         this.historicEventRepository.saveAndFlush(theEvent);
@@ -39,8 +34,8 @@ public class HistoricEventService {
 
     public List<MatchingHistoricEvent> retrieveAllEventsOfAMission(UUID missionId) {
         List<HistoricEvent> historicEvents = this.historicEventRepository.findAllByMission(missionId);
-        return historicEvents.stream().map(he -> new MatchingHistoricEvent(he))
-                .collect(Collectors.toList());
+        return historicEvents.stream().map(MatchingHistoricEvent::new)
+                .toList();
 
     }
 }
