@@ -1,27 +1,22 @@
 package fr.soat.training.api.superhero.services;
 
-import fr.soat.training.api.superhero.domain.Mission;
-import fr.soat.training.api.superhero.domain.builders.MissionBuilder;
-import fr.soat.training.api.superhero.repository.HistoricEventRepository;
-import fr.soat.training.api.superhero.repository.MissionRepository;
-import fr.soat.training.api.superhero.services.domain.MatchingHero;
-import fr.soat.training.api.superhero.services.domain.MatchingMission;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import fr.soat.training.api.superhero.domain.Mission;
+import fr.soat.training.api.superhero.domain.SuperHero;
+import fr.soat.training.api.superhero.domain.builders.MissionBuilder;
+import fr.soat.training.api.superhero.repository.MissionRepository;
+import fr.soat.training.api.superhero.services.domain.MatchingMission;
+import org.springframework.stereotype.Service;
 
 @Service
 public class MissionService {
 
-    @Autowired
-    private MissionRepository missionRepository;
+    private final MissionRepository missionRepository;
 
-    @Autowired
-    private SuperHeroService superHeroService;
+    private final SuperHeroService superHeroService;
 
     public MissionService(MissionRepository missionRepository, SuperHeroService superHeroService) {
         this.missionRepository = missionRepository;
@@ -33,13 +28,13 @@ public class MissionService {
         List<Mission> missions = this.missionRepository.findAll();
 
         return missions.stream()
-                .map(mission -> new MatchingMission(mission))
-                .collect(Collectors.toList());
+                .map(MatchingMission::new)
+                .toList();
     }
 
     public MatchingMission createAMissionFor(String superHeroName, String missionTitle) {
-        MatchingHero matchingHero = this.superHeroService.getTheSuperHeroMatching(superHeroName);
-        Mission theMission = new MissionBuilder().createMission(missionTitle).assignedTo(matchingHero.getName())
+        SuperHero matchingHero = this.superHeroService.getTheSuperHero(superHeroName);
+        Mission theMission = new MissionBuilder().createMission(missionTitle).assignedTo(matchingHero)
                 .build();
 
         Mission mission = this.missionRepository.saveAndFlush(theMission);
@@ -47,8 +42,12 @@ public class MissionService {
         return new MatchingMission(mission);
     }
 
-    public MatchingMission getMission(UUID missionUUID) {
+    public MatchingMission getMatchingMission(UUID missionUUID) {
         Optional<Mission> mission = this.missionRepository.findById(missionUUID);
-        return Optional.ofNullable(mission).map(m -> new MatchingMission(m.get())).orElse(null);
+        return mission.map(MatchingMission::new).orElse(null);
+    }
+
+    public Mission getMission(UUID missionUUID) {
+        return this.missionRepository.findById(missionUUID).orElse(null);
     }
 }
